# certifiedcustomassets

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
data/: index.html  manifest.webmanifest
scripts/: bucket.actor.mjs  upload.assets.mjs
src/certifiedcustomassets_backend/: Cargo.toml
src/certifiedcustomassets_backend/src/: cert.rs  http.rs  impls.rs  lib.rs  store.rs  types.rs
src/declarations/certifiedcustomassets_backend/: certifiedcustomassets_backend.did.d.ts  certifiedcustomassets_backend.did.js  index.js
