[package]
name = "certifiedcustomassets_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.3"
ic-cdk = "0.6.3"
ic-cdk-macros = "0.6.3"
serde = "1.0.145"
ic-certified-map = "0.3.1"
sha2 = "0.10.6"
serde_bytes = "0.11.7"